added base html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,60 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Add your HTML content here -->
+  <!-- Hero section: This is the main introduction area -->
+  <section class="hero">
+    <h1>Welcome to My Personal Website</h1>
+    <p>Hello! I'm a web development student.</p>
+
+    <!-- Navigation bar: Links to sections on the page, now inside hero at the bottom -->
+    <nav class="navbar">
+      <ul>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </section>
+
+  <!-- Bio section: Write a short introduction about yourself -->
+  <section class="bio" id="about-me">
+    <h2>About Me</h2>
+    <p>
+      I am learning web development and excited to build new projects. This website will showcase my progress and portfolio.
+    </p>
+  </section>
+
+  <!-- Skills section: List your skills here -->
+  <section class="skills" id="skills">
+    <h2>My Skills</h2>
+    <!-- Each skill uses an icon image and a label -->
+    <ul>
+      <li>
+        <img src="img/html.svg" alt="HTML icon" class="skill-icon">
+        HTML
+      </li>
+      <li>
+        <img src="img/css.svg" alt="CSS icon" class="skill-icon">
+        CSS
+      </li>
+      <li>
+        <img src="img/javascript.svg" alt="JavaScript icon" class="skill-icon">
+        JavaScript (learning)
+      </li>
+    </ul>
+  </section>
+
+  <!-- Contact section: Add your contact info here -->
+  <section class="contact" id="contact">
+    <h2>Contact</h2>
+    <p>
+      You can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a>
+    </p>
+  </section>
+
+  <!-- Footer section: Add your footer content here -->
+  <footer class="footer">
+    <p>&copy; 2024 My Personal Site</p>
+  </footer>
 </body>
 </html>
