made edjustments to layout img

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Personal Site</title>
+  <title>Einna Silmone</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Hero section: This is the main introduction area -->
   <section class="hero">
-    <h1>Welcome to My Personal Website</h1>
+    <h1>Einna Silmone</h1>
     <p>Hello! I'm a web development student.</p>
 
     <!-- Navigation bar: Links to sections on the page, now inside hero at the bottom -->
@@ -21,11 +21,15 @@
     </nav>
   </section>
 
+<main>
+  <section id="picture">
+    <img src="img/itsame2.jpg" alt="An image of myself"> 
+  </section>
   <!-- Bio section: Write a short introduction about yourself -->
   <section class="bio" id="about-me">
     <h2>About Me</h2>
     <p>
-      I am learning web development and excited to build new projects. This website will showcase my progress and portfolio.
+      I am curious UX student that is diving into the world or Web Design and Development!
     </p>
   </section>
 
@@ -53,9 +57,10 @@
   <section class="contact" id="contact">
     <h2>Contact</h2>
     <p>
-      You can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a>
+      <a href="https://github.com/esilmone">GitHub</a>
     </p>
   </section>
+</main>
 
   <!-- Footer section: Add your footer content here -->
   <footer class="footer">
