--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Einna Silmone</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500&family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Hero section: This is the main introduction area -->
   <section class="hero">
+    <!-- Hero image fills the header -->
+    <img src="img/5246024.jpg" alt="Hero image" class="hero-img">
     <h1>Einna Silmone</h1>
-    <p>Hello! I'm a web development student.</p>
+  
 
     <!-- Navigation bar: Links to sections on the page, now inside hero at the bottom -->
     <nav class="navbar">
@@ -29,7 +33,7 @@
   <section class="bio" id="about-me">
     <h2>About Me</h2>
     <p>
-      I am curious UX student that is diving into the world or Web Design and Development!
+      I am curious UX student that is diving into the world or Web Design and Development! 
     </p>
   </section>
 
