adjusted icons and layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="bio" id="about-me">
     <h2>About Me</h2>
     <p>
-      I am curious UX student that is diving into the world or Web Design and Development! 
+      I am curious UX student that is diving into the world of Web Design and Development! I am currently a junior in ASU's GIT program, 
     </p>
   </section>
 
@@ -54,6 +54,16 @@
         <img src="img/javascript.svg" alt="JavaScript icon" class="skill-icon">
         JavaScript (learning)
       </li>
+      <!-- Added Photoshop skill -->
+      <li>
+        <img src="img/imagesmode.svg" alt="Photoshop icon" class="skill-icon">
+        Photoshop
+      </li>
+      <!-- Added Illustrator skill -->
+      <li>
+        <img src="img/brush.svg" alt="Illustrator icon" class="skill-icon">
+        Illustrator
+      </li>
     </ul>
   </section>
 
@@ -68,7 +78,7 @@
 
   <!-- Footer section: Add your footer content here -->
   <footer class="footer">
-    <p>&copy; 2024 My Personal Site</p>
+    <p>&copy; 2025 My Personal Site</p>
   </footer>
 </body>
 </html>
