fixed bio width and changed section names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Projects</a></li>
       </ul>
     </nav>
   </section>
@@ -32,9 +32,9 @@
   <!-- Bio section: Write a short introduction about yourself -->
   <section class="bio" id="about-me">
     <h2>About Me</h2>
-    <p>
-      I am curious UX student that is diving into the world of Web Design and Development! I am currently a junior in ASU's GIT program, 
-    </p>
+      <p>
+        I am curious UX student that is diving into the world of Web Design and Development! I am currently a junior in ASU's GIT program, and I am still discovering more about design and coding. I love fun and colorful designs, and I am learning how to incorporate all of these things into my own style.
+      </p>
   </section>
 
   <!-- Skills section: List your skills here -->
@@ -67,9 +67,9 @@
     </ul>
   </section>
 
-  <!-- Contact section: Add your contact info here -->
+  <!-- Projects section: Add your project info here -->
   <section class="contact" id="contact">
-    <h2>Contact</h2>
+    <h2>Projects</h2>
     <p>
       <a href="https://github.com/esilmone">GitHub</a>
     </p>
